# boop_counter

./: .gitignore  Cargo.toml  deny.toml  justfile
.github/workflows/: rust.yml
src/: keybinding.rs  main.rs  service.rs
