[package]
name = "boop_counter"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["HoppouDev"]
description = "A boop counter for VRChat"
keywords = ["vrchat", "osc"]

[dependencies]
vrchat_osc = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
hashbrown = { version = "0.16.1", features = ["serde"] }
rosc = "0.11.4"
rdev = { version = "0.5.3", features = ["serde", "serialize"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
